@@ -1,37 +1,107 @@
-I have a Java Servlet application that sends a webhook request to n8n when a user applies for a job.
 
-Problem: The webhook is being triggered twice, causing duplicate data in my system.
-
-Here is my current flow:
-
-1. User submits a form (POST /teacher-apply)
-2. Server uploads CV
-3. Saves application to database
-4. Calls sendWebhook() using HttpURLConnection
-
-Code snippet (important part):
-
-* Servlet: TeacherJobApplyServlet (doPost method)
-* Webhook method: sendWebhook()
-
-I need you to:
-
-1. Analyze possible reasons why the webhook is triggered twice
-2. Identify whether the issue is from:
-
-   * Frontend (double submit, reload, button click)
-   * Backend (Servlet logic, multiple calls)
-   * n8n (retry mechanism, webhook configuration)
-3. Suggest concrete debugging steps (logs, breakpoints, request tracing)
-4. Provide fixes for each possible cause
-5. Suggest best practices to prevent duplicate webhook calls in production
-
-Additional context:
-
-* Using HttpURLConnection (synchronous call)
-* Webhook URL: http://localhost:5678/webhook/teacher-apply
-* No async processing yet
-* No duplicate check in database
-
-Important:
-Do NOT give generic answers. I want step-by-step debugging strategy and exact fixes.
+You reached the start of the range
+Mar 24, 2026, 2:59 PM
+24-Mar-2026 08:00:28.232 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Server version name:   Apache Tomcat/10.1.53
+24-Mar-2026 08:00:28.239 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Server built:          Mar 18 2026 13:50:42 UTC
+24-Mar-2026 08:00:28.239 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Server version number: 10.1.53.0
+24-Mar-2026 08:00:28.239 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log OS Name:               Linux
+24-Mar-2026 08:00:28.239 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log OS Version:            6.12.12+bpo-cloud-amd64
+24-Mar-2026 08:00:28.239 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Architecture:          amd64
+24-Mar-2026 08:00:28.239 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Java Home:             /opt/java/openjdk
+24-Mar-2026 08:00:28.239 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log JVM Version:           17.0.18+8
+24-Mar-2026 08:00:28.240 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log JVM Vendor:            Eclipse Adoptium
+24-Mar-2026 08:00:28.240 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log CATALINA_BASE:         /usr/local/tomcat
+24-Mar-2026 08:00:28.240 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log CATALINA_HOME:         /usr/local/tomcat
+24-Mar-2026 08:00:28.250 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: -Djava.util.logging.config.file=/usr/local/tomcat/conf/logging.properties
+24-Mar-2026 08:00:28.252 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: --add-opens=java.base/java.io=ALL-UNNAMED
+24-Mar-2026 08:00:28.252 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: -Djava.protocol.handler.pkgs=org.apache.catalina.webresources
+24-Mar-2026 08:00:28.252 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: -Dsun.io.useCanonCaches=false
+24-Mar-2026 08:00:28.250 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager
+24-Mar-2026 08:00:28.252 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: -Dorg.apache.catalina.security.SecurityListener.UMASK=0027
+24-Mar-2026 08:00:28.252 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: --add-opens=java.base/java.lang=ALL-UNNAMED
+24-Mar-2026 08:00:28.251 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: -Xms256m
+24-Mar-2026 08:00:28.252 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+24-Mar-2026 08:00:28.251 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: -Xmx350m
+24-Mar-2026 08:00:28.251 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: -XX:MaxMetaspaceSize=128m
+24-Mar-2026 08:00:28.251 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: -Djdk.tls.ephemeralDHKeySize=2048
+24-Mar-2026 08:00:28.252 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: --add-opens=java.base/java.util=ALL-UNNAMED
+24-Mar-2026 08:00:28.252 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+24-Mar-2026 08:00:28.252 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
+24-Mar-2026 08:00:28.252 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: -Dcatalina.base=/usr/local/tomcat
+24-Mar-2026 08:00:28.252 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: -Dcatalina.home=/usr/local/tomcat
+24-Mar-2026 08:00:28.252 INFO [main] org.apache.catalina.startup.VersionLoggerListener.log Command line argument: -Djava.io.tmpdir=/usr/local/tomcat/temp
+24-Mar-2026 08:00:28.265 INFO [main] org.apache.catalina.core.AprLifecycleListener.lifecycleEvent Loaded Apache Tomcat Native library [2.0.14] using APR version [1.7.2].
+24-Mar-2026 08:00:28.272 INFO [main] org.apache.catalina.core.AprLifecycleListener.initializeSSL OpenSSL successfully initialized [OpenSSL 3.0.13 30 Jan 2024]
+Starting Container
+24-Mar-2026 08:00:28.666 INFO [main] org.apache.coyote.AbstractProtocol.init Initializing ProtocolHandler ["http-nio-8080"]
+24-Mar-2026 08:00:28.731 INFO [main] org.apache.catalina.startup.Catalina.load Server initialization in [711] milliseconds
+24-Mar-2026 08:00:28.825 INFO [main] org.apache.catalina.core.StandardService.startInternal Starting service [Catalina]
+24-Mar-2026 08:00:28.826 INFO [main] org.apache.catalina.core.StandardEngine.startInternal Starting Servlet engine: [Apache Tomcat/10.1.53]
+24-Mar-2026 08:00:28.878 INFO [main] org.apache.catalina.startup.HostConfig.deployWAR Deploying web application archive [/usr/local/tomcat/webapps/ROOT.war]
+24-Mar-2026 08:00:31.519 INFO [main] org.apache.jasper.servlet.TldScanner.scanJars At least one JAR was scanned for TLDs yet contained no TLDs. Enable debug logging for this logger for a complete list of JARs that were scanned but no TLDs were found in them. Skipping unneeded JARs during scanning can improve startup time and JSP compilation time.
+🚀 [AI Scheduler] Initializing automated dropout risk scanning system...
+✅ [AI Scheduler] System is ONLINE!
+🕒 [Info] First scan will start in: 15 hours and 59 minutes (at 00:00 AM).
+🔄 [Info] Repeat cycle: Every 24 hours.
+24-Mar-2026 08:00:31.930 INFO [main] org.hibernate.jpa.internal.util.LogHelper.logPersistenceUnitInformation HHH000204: Processing PersistenceUnitInfo [name: courseManager]
+24-Mar-2026 08:00:31.970 INFO [main] org.hibernate.Version.logVersion HHH000412: Hibernate ORM core version 7.1.2.Final
+24-Mar-2026 08:00:32.313 WARN [main] org.hibernate.engine.jdbc.connections.internal.DriverManagerConnectionProviderImpl.configure HHH10001002: Using built-in connection pool (not intended for production use)
+24-Mar-2026 08:00:32.609 WARN [main] org.hibernate.engine.jdbc.dialect.internal.DialectFactoryImpl.constructDialect HHH90000025: MySQLDialect does not need to be specified explicitly using 'hibernate.dialect' (remove the property setting and it will be selected by default)
+24-Mar-2026 08:00:32.625 INFO [main] org.hibernate.engine.jdbc.env.internal.JdbcEnvironmentInitiator.logConnectionInfo HHH10001005: Database info:
+	Database JDBC URL [jdbc:mysql://centerbeam.proxy.rlwy.net:32618/railway?useSSL=false&serverTimezone=UTC]
+	Database driver: MySQL Connector/J
+	Database dialect: MySQLDialect
+	Database version: 9.4
+	Default catalog/schema: railway/undefined
+	Autocommit mode: false
+	Isolation level: REPEATABLE_READ
+	JDBC fetch size: none
+	Pool: DriverManagerConnectionProviderImpl
+	Minimum pool size: 1
+	Maximum pool size: 20
+24-Mar-2026 08:00:32.867 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Users.createdAt.
+24-Mar-2026 08:00:32.870 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Users.lastLoginDate.
+24-Mar-2026 08:00:32.904 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Student.dateOfBirth.
+24-Mar-2026 08:00:32.910 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Enrollment.enrollmentDate.
+24-Mar-2026 08:00:32.923 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Course.createdAt.
+24-Mar-2026 08:00:32.925 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Course.updatedAt.
+24-Mar-2026 08:00:32.932 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Section.createdAt.
+24-Mar-2026 08:00:32.978 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.QuizResult.attemptTime.
+24-Mar-2026 08:00:32.983 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.LessonResource.createdAt.
+24-Mar-2026 08:00:32.988 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.LearningProgress.lastAccess.
+24-Mar-2026 08:00:33.018 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.AIPrediction.createdAt.
+24-Mar-2026 08:00:33.021 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.StudyLog.accessTime.
+24-Mar-2026 08:00:33.029 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Subscription.endDate.
+24-Mar-2026 08:00:33.029 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Subscription.startDate.
+24-Mar-2026 08:00:33.031 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Notification.createdAt.
+24-Mar-2026 08:00:33.062 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Payment.paymentDate.
+24-Mar-2026 08:00:33.066 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Candidates.createdAt.
+24-Mar-2026 08:00:33.067 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Candidates.interviewTime.
+24-Mar-2026 08:00:33.071 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Cart.createdAt.
+24-Mar-2026 08:00:33.073 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.CoursePayment.createdAt.
+24-Mar-2026 08:00:33.074 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.CartItem.addedAt.
+24-Mar-2026 08:00:33.077 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.CourseOrder.createdAt.
+24-Mar-2026 08:00:33.082 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.RepoSubmission.submittedAt.
+24-Mar-2026 08:00:33.084 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Assignment.createdAt.
+24-Mar-2026 08:00:33.088 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.TeacherJob.createdAt.
+24-Mar-2026 08:00:33.089 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.TeacherJob.updatedAt.
+24-Mar-2026 08:00:33.096 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.MockExam.createdAt.
+24-Mar-2026 08:00:33.102 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.MockAttempt.startedAt.
+24-Mar-2026 08:00:33.102 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.MockAttempt.submittedAt.
+24-Mar-2026 08:00:33.104 WARN [main] org.hibernate.boot.model.internal.BasicValueBinder.prepareBasicAttribute HHH90000033: Encountered use of deprecated annotation [interface jakarta.persistence.Temporal] at courseitproject.model.Errorreports.createdAt.
+24-Mar-2026 08:00:35.219 INFO [main] org.hibernate.engine.transaction.jta.platform.internal.JtaPlatformInitiator.initiateService HHH000489: No JTA platform available (set 'hibernate.transaction.jta.platform' to enable JTA platform integration)
+DEBUG: Tables of loaded providers
+DEBUG: Providers Listed By Class Name: {com.sun.mail.smtp.SMTPTransport=jakarta.mail.Provider[TRANSPORT,smtp,com.sun.mail.smtp.SMTPTransport,Oracle], com.sun.mail.imap.IMAPSSLStore=jakarta.mail.Provider[STORE,imaps,com.sun.mail.imap.IMAPSSLStore,Oracle], com.sun.mail.pop3.POP3Store=jakarta.mail.Provider[STORE,pop3,com.sun.mail.pop3.POP3Store,Oracle], com.sun.mail.smtp.SMTPSSLTransport=jakarta.mail.Provider[TRANSPORT,smtps,com.sun.mail.smtp.SMTPSSLTransport,Oracle], com.sun.mail.imap.IMAPStore=jakarta.mail.Provider[STORE,imap,com.sun.mail.imap.IMAPStore,Oracle], com.sun.mail.pop3.POP3SSLStore=jakarta.mail.Provider[STORE,pop3s,com.sun.mail.pop3.POP3SSLStore,Oracle]}
+DEBUG: Providers Listed By Protocol: {imap=jakarta.mail.Provider[STORE,imap,com.sun.mail.imap.IMAPStore,Oracle], smtp=jakarta.mail.Provider[TRANSPORT,smtp,com.sun.mail.smtp.SMTPTransport,Oracle], pop3=jakarta.mail.Provider[STORE,pop3,com.sun.mail.pop3.POP3Store,Oracle], imaps=jakarta.mail.Provider[STORE,imaps,com.sun.mail.imap.IMAPSSLStore,Oracle], smtps=jakarta.mail.Provider[TRANSPORT,smtps,com.sun.mail.smtp.SMTPSSLTransport,Oracle], pop3s=jakarta.mail.Provider[STORE,pop3s,com.sun.mail.pop3.POP3SSLStore,Oracle]}
+DEBUG: Jakarta Mail version 2.0.1
+DEBUG: successfully loaded resource: /META-INF/javamail.default.providers
+DEBUG: successfully loaded resource: /META-INF/javamail.default.address.map
+DEBUG: Jakarta Mail version 2.0.1
+DEBUG: successfully loaded resource: /META-INF/javamail.default.providers
+DEBUG: Tables of loaded providers
+DEBUG: Providers Listed By Class Name: {com.sun.mail.smtp.SMTPTransport=jakarta.mail.Provider[TRANSPORT,smtp,com.sun.mail.smtp.SMTPTransport,Oracle], com.sun.mail.imap.IMAPSSLStore=jakarta.mail.Provider[STORE,imaps,com.sun.mail.imap.IMAPSSLStore,Oracle], com.sun.mail.pop3.POP3Store=jakarta.mail.Provider[STORE,pop3,com.sun.mail.pop3.POP3Store,Oracle], com.sun.mail.smtp.SMTPSSLTransport=jakarta.mail.Provider[TRANSPORT,smtps,com.sun.mail.smtp.SMTPSSLTransport,Oracle], com.sun.mail.imap.IMAPStore=jakarta.mail.Provider[STORE,imap,com.sun.mail.imap.IMAPStore,Oracle], com.sun.mail.pop3.POP3SSLStore=jakarta.mail.Provider[STORE,pop3s,com.sun.mail.pop3.POP3SSLStore,Oracle]}
+DEBUG: Providers Listed By Protocol: {imap=jakarta.mail.Provider[STORE,imap,com.sun.mail.imap.IMAPStore,Oracle], smtp=jakarta.mail.Provider[TRANSPORT,smtp,com.sun.mail.smtp.SMTPTransport,Oracle], pop3=jakarta.mail.Provider[STORE,pop3,com.sun.mail.pop3.POP3Store,Oracle], imaps=jakarta.mail.Provider[STORE,imaps,com.sun.mail.imap.IMAPSSLStore,Oracle], smtps=jakarta.mail.Provider[TRANSPORT,smtps,com.sun.mail.smtp.SMTPSSLTransport,Oracle], pop3s=jakarta.mail.Provider[STORE,pop3s,com.sun.mail.pop3.POP3SSLStore,Oracle]}
+DEBUG: successfully loaded resource: /META-INF/javamail.default.address.map
+24-Mar-2026 08:00:36.340 INFO [main] org.apache.catalina.startup.HostConfig.deployWAR Deployment of web application archive [/usr/local/tomcat/webapps/ROOT.war] has finished in [7,462] ms
+24-Mar-2026 08:00:36.344 INFO [main] org.apache.coyote.AbstractProtocol.start Starting ProtocolHandler ["http-nio-8080"]
+24-Mar-2026 08:00:36.378 INFO [main] org.apache.catalina.startup.Catalina.start Server startup in [7646] milliseconds
